# medical-calc-mcp

./: .copilotignore  .dockerignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  README.md  README.zh-TW.md  ROADMAP.md  docker-compose.https.yml  docker-compose.yml  index.html  mkdocs.yml  openclaw.json  pyproject.toml  requirements.txt  sitemap.xml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: benchmark-nightly.yml  ci.yml  dependabot-lockfile.yml  docs.yml
api/: openapi.json
api/mcp-tools/: index.html
api/rest-api/: index.html
calculators/: index.html
calculators/anesthesiology/: index.html
calculators/cardiology/: index.html
calculators/critical-care/: index.html
calculators/geriatrics/: index.html
calculators/hepatology/: index.html
calculators/nephrology/: index.html
calculators/neurology/: index.html
calculators/psychiatry/: index.html
data/: formula_provenance.json
data/agent_decision_bench/profiles/: manifest.json
data/agent_decision_bench/rubrics/: default_scoring.json
data/benchmarks/: medcalc_bench_sample.csv  sample_report.json  source_registry.json
development/architecture/: index.html
development/contributing/: index.html
development/guideline-coverage/: index.html
development/roadmap/: index.html
docs/: AGENT_CLINICAL_DECISION_SUPPORT_GAP_AND_BREAKTHROUGH_PLAN.md  AGENT_DECISION_SUPPORT_E2E_BENCHMARK.md  BENCHMARK_COVERAGE_AUDIT.md  BENCHMARK_DATASET_SCHEMA.md  BENCHMARK_SOURCE_SCOUTING_PLAN.md  BENCHMARK_USAGE.md  CALCULATOR_CATALOG.md  CALCULATOR_CATALOG.zh-TW.md  COCHRANE_SCORE_RECOMMENDATIONS.md  DEPENDENCY_UPGRADE_PLAYBOOK.md  DEPLOYMENT.md  DISEASE_SCORE_KNOWLEDGE_GRAPH.md  GUIDELINE_COVERAGE_SUMMARY.md  GUIDELINE_COVERAGE_SUMMARY.zh-TW.md  GUIDELINE_RECOMMENDED_TOOLS_2020_2025.md  GUIDELINE_RECOMMENDED_TOOLS_2023_2025.md  MEDCALC_BENCH_COMPARISON.md  OPENCLAW.md  PRODUCTION_READINESS.md  SPECIALTY_COVERAGE_GAP_ANALYSIS.md
docs_site/: index.md
docs_site/api/: mcp-tools.md  openapi.json  rest-api.md
docs_site/calculators/: anesthesiology.md  cardiology.md  critical-care.md  geriatrics.md  hepatology.md  index.md  nephrology.md  neurology.md  psychiatry.md
docs_site/development/: architecture.md  contributing.md  guideline-coverage.md  roadmap.md
docs_site/getting-started/: configuration.md  installation.md  quickstart.md
docs_site/zh-tw/: calculators.md  guideline-coverage.md  index.md
examples/: MCP_TEST_EXAMPLES.md  basic_usage.py  clinical_workflows.py
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
memory-bank/: activeContext.md  architect.md  decisionLog.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md
nginx/: nginx.conf
references/: README.md
scripts/: benchmark_adapt_mcp_trace.py  benchmark_build_reports.py  benchmark_eval_agent_runs.py  benchmark_ingest.py  benchmark_profiles_matrix.py  benchmark_run_profile.py  build_benchmark_coverage_audit.py  build_hf_benchmark_dataset.py  check_key_tools.py  check_production_readiness.py  check_project_consistency.py  cleanup_bad_assertions.py  count_benchmark_cases.py  count_references.py  count_tools.py  fix_coverage_final.py  fix_mypy_types.py  fix_redefs.py  fix_remaining_optionals.py  fix_test_literals.py  fix_test_optionals.py  fix_tests_typing.py  generate-ssl-certs.sh  generate_openapi_spec.py  generate_rest_api_docs.py  generate_specialty_coverage_gap_analysis.py  generate_tool_catalog_docs.py  install_hooks.ps1  medcalc_bench_eval.py  start-https-docker.sh  start-https-local.sh  validate_commit_message.py
search/: search_index.json
src/: __init__.py  main.py
src/application/: __init__.py
src/domain/: __init__.py
src/domain/services/: base.py  (+2 more)
src/infrastructure/: __init__.py
src/shared/: __init__.py  agent_benchmark_evaluator.py  agent_benchmark_profiles.py  agent_benchmark_reporting.py  agent_benchmark_trace_adapter.py  agent_benchmarking.py  benchmarking.py  formula_provenance.py  fuzzy_matching.py  hf_benchmark_dataset.py  production_readiness.py  project_metadata.py  smart_input.py
tests/: conftest.py  quick_test_phase9b.py  test_acid_base.py  test_additional_scores.py  test_agent_benchmark_ingest.py  test_agent_workflow_benchmark_eval.py  test_anesthesiology.py  test_api.py  test_api_metadata.py  test_auto_discovery.py  test_boundary_spec.py  test_cardiology.py  test_charlson_comorbidity.py  test_coverage_enhancement.py  test_critical_care.py  test_e2e.py  test_e2e_workflow.py  test_emergency.py  test_fena.py  test_formula_provenance.py  test_framingham.py  test_general.py  test_health_endpoint.py  test_hepatology.py  test_hf_benchmark_dataset.py  test_infectious_disease.py  test_integration_calculate.py  test_main.py  test_mcp_calculator_handlers.py  test_mcp_discovery.py  test_mcp_guidance.py  test_mcp_resources.py  test_medcalc_bench_eval.py  test_mme_calculator.py  test_nephrology.py  test_neurology.py  test_neurology_extended.py  test_obstetrics.py  test_param_matcher.py  test_parameter_validation.py  (+20 more)
tests/e2e/: __init__.py  conftest.py  test_aa_gradient.py  test_abcd2.py  test_acef_ii.py  test_aims65.py  test_aldrete_score.py  test_anion_gap.py  test_apache_ii.py  test_apfel_ponv.py  test_apgar_score.py  test_asa_physical_status.py  test_ballard_score.py  test_bishop_score.py  test_body_surface_area.py  test_cam_icu.py  test_caprini_vte.py  test_centor_score.py  test_chads2_va.py  test_chads2_vasc.py  test_child_pugh.py  test_ckd_epi_2021.py  test_cockcroft_gault.py  test_corrected_calcium.py  test_corrected_qt.py  test_corrected_sodium.py  test_cpis.py  test_curb65.py  test_delta_ratio.py  test_fib4_index.py  test_fisher_grade.py  test_four_score.py  test_four_ts_hit.py  test_free_water_deficit.py  test_gcs.py  test_glasgow_blatchford.py  test_grace_score.py  test_has_bled.py  test_heart_score.py  test_hunt_hess.py  (+37 more)
zh-tw/: index.html
zh-tw/calculators/: index.html
zh-tw/guideline-coverage/: index.html
(+214 files in other folders)
