[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medical-calc-mcp"
version = "1.5.0"
description = "DDD-architected medical calculator MCP server with intelligent tool discovery"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "u9401066" }
]
keywords = [
    "medical",
    "calculator",
    "mcp",
    "model-context-protocol",
    "clinical",
    "healthcare",
    "ddd"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "mcp[cli]>=1.22.0",
    "pydantic>=2.11.0,<3.0.0",
    "starlette>=0.32.0",
    "uvicorn>=0.38.0",
    "sse-starlette>=2.0.0",
    "fastapi>=0.115.0",
    # Note: networkx is optional (tool_graph.py has fallback)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]
# Note: NO ML dependencies (torch, transformers) required
# networkx is pure Python, ~2MB, no native compilation

[project.scripts]
medical-calc-mcp = "src.infrastructure.mcp.server:main"
medical-calc-api = "src.infrastructure.api.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 160
target-version = "py311"

[tool.ruff.lint]
select = ["F", "I", "N", "W", "UP"]
ignore = ["UP045", "E501", "E402", "N818"]  # Allow long lines, late imports, exception naming

[tool.mypy]
python_version = "3.11"
strict = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # Allow assert statements

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
