[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medical-calc-mcp"
version = "1.6.2"
description = "DDD-architected medical calculator MCP server with intelligent tool discovery"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "u9401066" }
]
keywords = [
    "medical",
    "calculator",
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "model-context-protocol-server",
    "fastmcp",
    "medical-calculator",
    "clinical-decision-support",
    "ai-agent-tools",
    "agent-tooling",
    "openclaw",
    "clinical",
    "healthcare",
    "ddd"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "mcp[cli]>=1.25.0,<2.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "starlette>=0.50.0,<1.0.0",
    "uvicorn>=0.40.0,<1.0.0",
    "sse-starlette>=3.1.2,<4.0.0",
    "fastapi>=0.128.0,<1.0.0",
    "rapidfuzz>=3.14.3,<4.0.0",
    # Note: networkx is optional (tool_graph.py has fallback)
]

[project.urls]
Homepage = "https://github.com/u9401066/medical-calc-mcp"
Repository = "https://github.com/u9401066/medical-calc-mcp"
Documentation = "https://github.com/u9401066/medical-calc-mcp/blob/main/README.md"
Changelog = "https://github.com/u9401066/medical-calc-mcp/blob/main/CHANGELOG.md"
Issues = "https://github.com/u9401066/medical-calc-mcp/issues"
OpenClaw = "https://github.com/u9401066/medical-calc-mcp/blob/main/docs/OPENCLAW.md"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "mypy>=1.19.1,<2.0.0",
    "ruff>=0.15.6,<1.0.0",
    "pre-commit>=4.5.1,<5.0.0",
]
# Note: NO ML dependencies (torch, transformers) required
# networkx is pure Python, ~2MB, no native compilation

[project.scripts]
medical-calc-mcp = "src.infrastructure.mcp.server:main"
medical-calc-api = "src.infrastructure.api.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 160
target-version = "py311"

[tool.ruff.lint]
select = ["F", "I", "N", "W", "UP"]
ignore = ["UP045", "E501", "E402", "N818"]  # Allow long lines, late imports, exception naming

[tool.mypy]
python_version = "3.11"
strict = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # Allow assert statements

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "docker: tests that require a running Dockerized API instance",
]

[dependency-groups]
dev = [
    "mkdocs-awesome-pages-plugin>=2.10.1",
]
